# bapp-connectors

./: .gitlab-ci.yml  CLAUDE.md  README.md  docker-compose.test.yml  pyproject.toml
.github/workflows/: publish.yml
docs/: DJANGO_INTEGRATION.md  PROVIDER_GUIDE.md
docs/provider_documentation/courier/colete-online/: coleteonline_api.postman_collection.json
scripts/: setup_magento.py  setup_prestashop.py  setup_woocommerce.py  update_readme.py
src/bapp_connectors/: __init__.py
src/bapp_connectors/core/: __init__.py  errors.py  manifest.py  pricing.py  registry.py  status_mapping.py  types.py
src/bapp_connectors/core/capabilities/: __init__.py  bulk_operations.py  embedding.py  financial.py  image_generation.py  inbox.py  invoice_attach.py  oauth.py  product_feed.py  product_management.py  rich_messaging.py  saved_payment.py  shipping.py  streaming.py  subscriptions.py  transcription.py  webhooks.py
src/bapp_connectors/core/dto/: __init__.py  base.py  email.py  feed.py  financial.py  llm.py  message.py  order.py  partner.py  payment.py  product.py  saved_payment.py  shipment.py  subscription.py  webhook.py
src/bapp_connectors/core/http/: __init__.py  auth.py  client.py  middleware.py  rate_limit.py  retry.py
src/bapp_connectors/core/ports/: __init__.py  base.py  courier.py  email.py  feed.py  llm.py  messaging.py  payment.py  shop.py  storage.py
src/bapp_connectors/core/sync/: __init__.py  dto.py  engine.py
src/bapp_connectors/core/webhooks/: __init__.py  dispatcher.py  events.py  signatures.py
src/bapp_connectors/providers/courier/colete_online/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/courier/gls/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/courier/sameday/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/email/: __init__.py
src/bapp_connectors/providers/email/gmail/: __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py
src/bapp_connectors/providers/email/mailchimp/: __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py
src/bapp_connectors/providers/email/ses/: __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py
src/bapp_connectors/providers/email/smtp/: __init__.py  adapter.py  client.py  manifest.py  mappers.py
src/bapp_connectors/providers/feed/: _utils.py
src/bapp_connectors/providers/feed/compari/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/feed/facebook/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/feed/google_merchant/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/feed/okazii/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/llm/anthropic/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/llm/gemini/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/llm/ollama/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
src/bapp_connectors/providers/llm/openai/: README.md  __init__.py  adapter.py  client.py  errors.py  manifest.py  mappers.py  models.py
tests/core/: test_errors.py  test_pricing.py  test_rate_limiter.py  test_registry.py  test_retry.py  test_settings.py  test_status_mapping.py  test_sync_engine.py  test_webhook_dispatcher.py
tests/email/: conftest.py  contract.py
tests/email/gmail/: test_gmail.py
tests/email/mailchimp/: test_mailchimp.py  test_mailchimp_integration.py
tests/email/ses/: test_ses.py
tests/email/smtp/: test_email_integration.py  test_inbox.py  test_integration.py
tests/feed/: conftest.py  contract.py  test_filters.py
tests/feed/compari/: test_adapter.py  test_mappers.py
tests/feed/facebook/: test_adapter.py  test_mappers.py
tests/feed/google_merchant/: test_adapter.py  test_mappers.py
tests/feed/okazii/: test_adapter.py  test_mappers.py
tests/llm/: conftest.py  test_gemini_integration.py  test_mappers.py  test_openai_integration.py
tests/messaging/: conftest.py  contract.py
tests/messaging/discord/: test_unit.py
tests/messaging/instagram/: test_unit.py
tests/messaging/matrix/: test_unit.py
tests/messaging/messenger/: test_unit.py
tests/messaging/smtp/: test_email_integration.py  test_inbox.py  test_integration.py
tests/messaging/whatsapp/: test_unit.py
tests/mocks/: shopify_mock.py
tests/payment/: conftest.py  contract.py
tests/payment/cardinity/: test_unit.py
tests/payment/euplatesc/: test_unit.py
tests/payment/librapay/: test_unit.py
tests/payment/mobilpay/: test_unit.py
tests/payment/netopia/: test_unit.py
tests/payment/paypal/: test_unit.py
tests/payment/stripe/: test_integration.py  test_unit.py
tests/payment/utrust/: test_unit.py
tests/shop/: conftest.py  contract.py  financial_contract.py
tests/shop/emag/: conftest.py  test_integration.py
tests/shop/gomag/: conftest.py  test_integration.py
tests/shop/magento/: test_integration.py
tests/shop/okazii/: conftest.py  test_integration.py
tests/shop/prestashop/: test_integration.py
tests/shop/shopify/: test_integration.py
tests/shop/trendyol/: conftest.py  test_integration.py
tests/shop/woocommerce/: test_integration.py  test_oauth.py
tests/storage/: conftest.py  contract.py
tests/storage/dropbox/: test_oauth.py
tests/storage/ftp/: test_integration.py
tests/storage/google_drive/: test_oauth.py
tests/storage/onedrive/: test_oauth.py
tests/storage/s3/: test_integration.py
tests/storage/sftp/: test_integration.py
tests/storage/webdav/: test_integration.py
(+240 files in other folders)
