[project]
name = "bapp-connectors"
version = "0.18.1"
description = "Reusable integration framework for external service connectors (shops, couriers, payments, messaging, storage)"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "requests>=2.28",
    "pydantic>=2.0",
]

[project.optional-dependencies]
oauth = ["oauthlib>=3.0"]
sftp = ["paramiko>=3.0"]
s3 = ["boto3>=1.28"]
mobilpay = ["pyOpenSSL>=23.0", "cryptography>=41.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "responses>=0.23",
    "ruff>=0.1",
]

[tool.uv]
override-dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bapp_connectors"]

[tool.pytest.ini_options]
testpaths = ["tests", "src"]
pythonpath = ["src"]
markers = [
    "integration: integration tests requiring Docker services (docker-compose.test.yml)",
]
addopts = "-m 'not integration'"

[tool.uv.workspace]
members = ["packages/django"]

[tool.ruff]
target-version = "py311"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented-out code)
    "TID",    # flake8-tidy-imports
    "PIE",    # flake8-pie
    "C4",     # flake8-comprehensions
    "T20",    # flake8-print
    "RET",    # flake8-return
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E741",   # ambiguous variable name (used in loop vars matching API field names)
    "N815",   # mixedCase in class scope — Pydantic models match provider API field names
    "RET504", # unnecessary assignment before return
    "RET505", # unnecessary else after return
    "B007",   # loop control variable not used
    "B008",   # function call in default argument (pydantic Field)
    "RUF012", # mutable class defaults — fine for Pydantic/dataclass models
    "SIM102", # collapsible if — sometimes clearer nested
    "SIM103", # return condition directly — sometimes clearer explicit
    "SIM105", # contextlib.suppress — explicit try/except is clearer for complex cases
    "SIM108", # ternary — multi-line if/else is clearer
    "SIM110", # use all() — explicit loop is clearer
    "SIM118", # use key in dict — .keys() is sometimes intentional
    "RET503", # missing explicit return — fine for handler methods
    "RUF059", # unpacked variable unused — intentional destructuring
    "ERA001", # commented-out code — some kept as API reference
    "C416",   # unnecessary comprehension
    "PTH119", # os.path.basename — fine in non-path contexts
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20", "TC001", "TC003"]  # allow print in tests, runtime imports for fixtures
"**/dto/**" = ["TCH003", "TCH001", "TCH004"]  # Pydantic models need runtime imports
"**/models.py" = ["TCH003", "TCH001", "TCH004"]  # Pydantic models need runtime imports
"**/mappers.py" = ["TCH003", "TCH001", "TCH004"]  # mappers use DTO types at runtime
"**/adapter.py" = ["TCH003", "TCH001", "TCH004"]  # adapters use types at runtime
"**/capabilities/**" = ["TCH003", "TCH001"]  # ABC methods need types at runtime for Protocol
"**/sync/**" = ["TCH003", "TCH001"]  # sync engine uses types at runtime
"**/ports/**" = ["TCH003", "TCH001"]  # port ABCs need types at runtime

[tool.ruff.lint.isort]
known-first-party = ["bapp_connectors", "django_bapp_connectors"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
